--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: WHISPER 2025
+subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
 ---
