--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@ layout: home
 title: WHISPER 2025
 subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
 ---
+
+The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks is 
+co-located with ITASEC & SERICS 2025.
