--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@ subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Em
 
 The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks is 
 co-located with ITASEC & SERICS 2025.
+
+<img src="{{ '/assets/img/SERICS-ITASEC-CAGLIARI.png' | relative_url }}" alt="Profilo">
