--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@ title: WHISPER 2025
 subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
 ---
 
-The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks is 
-co-located with ITASEC & SERICS 2025.
 
 <img src="{{ '/assets/img/SERICS-ITASEC-CAGLIARI.png' | relative_url }}" alt="Profilo">
+
+Artificial Intelligence (AI) systems are increasingly integrated into a wide range of domains,
+including sensitive and safety-critical tasks, reshaping the landscape of information security.
+From synthetic content generation to intelligent system deployment, AI technologies now influence
+every layer of communication, data processing, and multimedia production.
+This evolution brings both opportunities and risks.
+On the one hand, AI can enhance the design of information-hiding techniques and detect when
+these techniques are used; on the other hand, it introduces novel attack vectors and privacy
+challenges. For defensive purposes, AI models can detect fingerprints left by steganographic
+methods or monitor subtle variations in system parameters to expose covert channels that evade
+traditional defenses. Conversely, adversaries are leveraging AI for offensive strategies.
+Generative models can produce steganographic media that are statistically indistinguishable
+from benign content, while AI algorithms can uncover and optimize new side channels,
+enabling stealthy data exfiltration. This ``cat-and-mouse'' dynamics is a critical area of
+focus for the cybersecurity community.
+
+Within this evolving context, ensuring the protection, integrity, and authenticity of
+information has become a central cybersecurity challenge.
+The widespread adoption of generative AI further amplifies the need for developing
+reliable mechanisms to watermark and trace digital content, including also ML models themselves.
+
+The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks is
+co-located with ITASEC & SERICS 2025, aims to bring together researchers and practitioners
+to explore cutting-edge developments in covert communications, digital watermarking,
+and steganography, with emphasis on the use of AI.
+
+### Important Dates
+- Paper Submission: 5 December 2025
+- Notification: 20 December 2025
+- Carmera-ready: 10 January 2026
+- Workshop: 09 February 2026
+
+### Acknowledgment
+WHISPER is supported by the Italian national project
+``WHAM! - Watermarking Hazards and novel perspectives in Adversarial Machine Learning'' (B53D23013340006)
