--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Em
 
 <img src="{{ '/assets/img/SERICS-ITASEC-CAGLIARI.png' | relative_url }}" alt="Profilo">
 
+<div style="text-align: justify;">
+    <p>
 Artificial Intelligence (AI) systems are increasingly integrated into a wide range of domains,
 including sensitive and safety-critical tasks, reshaping the landscape of information security.
 From synthetic content generation to intelligent system deployment, AI technologies now influence
@@ -21,23 +23,27 @@ Generative models can produce steganographic media that are statistically indist
 from benign content, while AI algorithms can uncover and optimize new side channels,
 enabling stealthy data exfiltration. This ``cat-and-mouse'' dynamics is a critical area of
 focus for the cybersecurity community.
-
+    </p>
+    <p>
 Within this evolving context, ensuring the protection, integrity, and authenticity of
 information has become a central cybersecurity challenge.
 The widespread adoption of generative AI further amplifies the need for developing
 reliable mechanisms to watermark and trace digital content, including also ML models themselves.
-
+    </p>
+    <p>
 The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks is
 co-located with ITASEC & SERICS 2025, aims to bring together researchers and practitioners
 to explore cutting-edge developments in covert communications, digital watermarking,
 and steganography, with emphasis on the use of AI.
+    </p>
+</div>
 
-### Important Dates
+<h3>Important Dates</h3>
 - Paper Submission: 5 December 2025
 - Notification: 20 December 2025
 - Carmera-ready: 10 January 2026
 - Workshop: 09 February 2026
 
-### Acknowledgment
+<h3>Acknowledgment</h3>
 WHISPER is supported by the Italian national project
 ``WHAM! - Watermarking Hazards and novel perspectives in Adversarial Machine Learning'' (B53D23013340006)
