--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@ and steganography, with emphasis on the use of AI.
 </div>
 
 <h3>Important Dates</h3>
-- Paper Submission: 5 December 2025
-- Notification: 20 December 2025
-- Carmera-ready: 10 January 2026
-- Workshop: 09 February 2026
+<ul>
+  <li>Paper Submission: 5 December 2025</li>
+  <li>Notification: 20 December 2025</li>
+  <li>Carmera-ready: 10 January 2026</li>
+  <li>Workshop: 09 February 2026</li>
+</ul>
 
 <h3>Acknowledgment</h3>
 WHISPER is supported by the Italian national project
-``WHAM! - Watermarking Hazards and novel perspectives in Adversarial Machine Learning'' (B53D23013340006)
+"WHAM! - Watermarking Hazards and novel perspectives in Adversarial Machine Learning" (B53D23013340006)
