--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: WHISPER 2025
-subtitle: The 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
+subtitle: The 1st edition of the Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
 ---
 
 
