--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ and steganography, with emphasis on the use of AI.
   <li>Workshop: 09 February 2026</li>
 </ul>
 
+Submissions to WHISPER2026 are now open via EasyChair: https://easychair.org/conferences?conf=whisper2026
+
 <h3>Acknowledgment</h3>
 WHISPER is supported by the Italian national project
 "WHAM! - Watermarking Hazards and novel perspectives in Adversarial Machine Learning" (B53D23013340006)
