--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@ subtitle: The 1st edition of the Workshop on Hidden Information, Steganography, 
 <img src="{{ '/assets/img/SERICS-ITASEC-CAGLIARI.png' | relative_url }}" alt="Profilo">
 
 <div style="text-align: justify;">
+    <p> Great news! The deadline has been extended!
+        New submission deadline: 12 December 2025
+        </p>
+</div>
+
+<div style="text-align: justify;">
     <p>
 Artificial Intelligence (AI) systems are increasingly integrated into a wide range of domains,
 including sensitive and safety-critical tasks, reshaping the landscape of information security.
@@ -40,7 +46,7 @@ and steganography, with emphasis on the use of AI.
 
 <h3>Important Dates</h3>
 <ul>
-  <li>Paper Submission: 5 December 2025</li>
+  <li>Paper Submission: 12 December 2025</li>
   <li>Notification: 20 December 2025</li>
   <li>Carmera-ready: 10 January 2026</li>
   <li>Workshop: 09 February 2026</li>
