--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ and steganography, with emphasis on the use of AI.
 <h3>Important Dates</h3>
 <ul>
   <li>Paper Submission: 18 December 2025</li>
-  <li>Notification: 20 December 2025</li>
-  <li>Carmera-ready: 10 January 2026</li>
+  <li>Notification: 12 January 2026</li>
   <li>Workshop: 09 February 2026</li>
+  <li>Camera-ready: 23 February 2026</li>
 </ul>
 
 Submissions to WHISPER2026 are now open via <a href="https://easychair.org/conferences?conf=whisper2026">EasyChair</a>
